# FloraLink

./: .gitignore  README.md  pubspec.yaml  pyproject.toml
assets/: README.md
assets/images/: README.md
backend/floralink_backend/: database.py  deps.py  main.py  models.py  schemas.py
backend/floralink_backend/core/: config.py  security.py
backend/floralink_backend/routers/: __init__.py  assistant.py  auth.py  communities.py  frontend.py  gardens.py  observations.py  plants.py  users.py
backend/tests/: conftest.py  test_auth.py  test_communities.py  test_frontend_api.py  test_gardens.py  test_migrations.py  test_observations.py  test_plants.py  utils.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/components/: AssistantPanel.tsx  CommunityGroupCard.tsx  CommunityPostCard.tsx  EncyclopediaTable.tsx  Layout.tsx  ObservationCard.tsx  ObservationMap.tsx  PlantCard.tsx  StatCard.tsx  TaskList.tsx  Timeline.tsx  motionPresets.ts
frontend/src/data/: mockData.ts
frontend/src/hooks/: useAssistant.ts  useGardenDashboard.ts
frontend/src/lib/: api.ts  auth.ts
frontend/src/pages/: AssistantPage.tsx  CommunitiesPage.tsx  DashboardPage.tsx  EncyclopediaPage.tsx  (+2 more)
lib/: app.dart  main.dart
lib/models/: assistant.dart  community.dart  encyclopedia.dart  models.dart  observation.dart  plant.dart  task.dart
lib/services/: api_config.dart  api_service.dart  mock_repository.dart
lib/theme/: app_theme.dart
lib/widgets/: adaptive_navigation.dart  gradient_card.dart  info_chip.dart  section_header.dart
(+8 files in other folders)
