[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "floralink-backend"
version = "0.1.0"
description = "Backend service for the FloraLink community gardening platform"
authors = [{name = "FloraLink"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.95.2",
    "uvicorn[standard]>=0.20,<0.23",
    "sqlalchemy>=1.4,<2.0",
    "pydantic<2",
    "python-jose[cryptography]>=3.3,<4.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "python-multipart>=0.0.5,<0.0.7",
]

[project.optional-dependencies]
test = [
    "pytest>=7.2",
    "httpx>=0.23",
]

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]
